--- a/src/styles.css
+++ b/src/styles.css
@@ -656,6 +656,12 @@ mark {
 .marg-t-60 {
     padding-top: 60px;
 }
+/* #page-toshow-nurses-report {
+    padding-bottom: 50px;
+    padding-top: 50px;
+    width: 100%;
+    margin: 0px 140px 0px 0px;
+} */
 #page-toshow {
     padding-bottom: 50px;
     padding-top: 50px;
