--- a/src/app/emailsdashboard/emailsdashboard.component.css
+++ b/src/app/emailsdashboard/emailsdashboard.component.css
@@ -12,3 +12,32 @@ table {
   .table-row:hover{
     background-color: aliceblue;
   }
+
+  tr.example-detail-row {
+    height: 0;
+  }
+  
+  tr.example-element-row:not(.example-expanded-row):hover {
+    background: whitesmoke;
+  }
+  
+  tr.example-element-row:not(.example-expanded-row):active {
+    background: #efefef;
+  }
+
+  .example-element-detail {
+    overflow: hidden;
+    display: flex;
+  }
+  
+  .example-element-row td {
+    border-bottom-width: 0;
+  }
+  
+  .example-element-description {
+    padding: 20px;
+  }
+  
+  .example-element-description-attribution {
+    opacity: 0.5;
+  }
