--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -124,103 +124,115 @@
     </div>
     <mat-progress-bar mode="indeterminate" *ngIf="!loaded"></mat-progress-bar>
     <div dir="rtl">
-        <mat-table [dataSource]="dataSource" class="mat-elevation-z8" [formGroup]="tableEmails">
-            <!-- Position Column -->
+        <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8"
+            [formGroup]="tableEmails">
+            <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
+                <th th *matHeaderCellDef> {{column}} </th>
+                <td td *matCellDef="let element"> {{element[column]}} </td>
+              </ng-container> -->
             <ng-container matColumnDef="delete">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;">מחיקת פנייה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="warn" (click)="deleteInquiry(element.EmailID)"
                         *ngIf="UserName == 'matias' || UserName == 'miruach'"><span class="material-icons">
                             delete
-                        </span></button> </mat-cell>
+                        </span></button> </td>
             </ng-container>
 
-            <!-- Position Column -->
             <ng-container matColumnDef="FormID">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מס' פניה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailID}} </mat-cell>
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailID}} </td>
             </ng-container>
 
-            <!-- Name Column -->
             <ng-container matColumnDef="FormName">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם פונה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompName}} </mat-cell>
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompName}} </td>
             </ng-container>
 
             <ng-container matColumnDef="formDepartment">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> נושא פניה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompSubject}}
-                </mat-cell>
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompSubject}}
+                </td>
             </ng-container>
 
-            <!-- Weight Column -->
             <ng-container matColumnDef="FormDate">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך קבלת
-                    פניה </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime}}
-                </mat-cell>
+                    פניה </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime}}
+                </td>
             </ng-container>
 
-            <!-- Update Column -->
             <ng-container matColumnDef="update">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> ניהול פניה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="accent" (click)="openDialogToManageEmail(element.EmailID,1)"
                         *ngIf="UserName == 'matias' || UserName == 'miruach'"><span class="material-icons">
                             event_note
-                        </span></button> </mat-cell>
+                        </span></button> </td>
             </ng-container>
 
             <ng-container matColumnDef="add">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> פיצול פניה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="accent" (click)="openDialogToManageEmail(element.EmailID,0)"
                         *ngIf="UserName == 'matias' || UserName == 'miruach'"><span class="material-icons">
                             add
-                        </span></button> </mat-cell>
+                        </span></button> </td>
             </ng-container>
 
-            <!-- Update Column -->
             <ng-container matColumnDef="showAll">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> צירוף אחראי
-                    לפניה </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
+                    לפניה </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="primary" (click)="openDialogToStatusComplaint(element.EmailID)"><span
-                            class="material-icons"><i matBadgeColor="warn" [matBadge]="element.NumberOfUnread"></i>
+                            class="material-icons">
+                            <i matBadgeColor="warn" [matBadge]="element.NumberOfUnread"></i>
                             question_answer
-                        </span></button> </mat-cell>
+                        </span></button> </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef
+                <th mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סטטוס פניה
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;">
+                </th>
+                <td mat-cell *matCellDef="let element" style="justify-content: center;">
                     <mat-slide-toggle [checked]="element.Status" (change)="changeStatus($event,element.EmailID)"
                         *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="פתיחת/סגירת פניה">
                     </mat-slide-toggle>
-                </mat-cell>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                    <div class="example-element-detail"
+                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                        <div class="example-element-description">
+                            {{element.ContentToShow}}
+                        </div>
+                    </div>
+                </td>
             </ng-container>
 
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" id="toolTipStyle"
-                matTooltip="{{row.ContentToShow}}"></mat-row>
-        </mat-table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns;" class="example-element-row"
+                [class.example-expanded-row]="expandedElement === element"
+                (click)="expandedElement = expandedElement === element ? null : element">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        </table>
         <button (click)="openDialogToManageEmail(0,0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"
             *ngIf="UserName == 'matias' || UserName == 'miruach'" matTooltip="הוספת פנייה חדשה"><i
                 class="material-icons">add</i></button>
@@ -229,7 +241,7 @@
             <div class="col text-center">
                 <h2>סה"כ מספר פניות: {{totalNumberOfInquiries}}</h2>
             </div>
-            
+
         </div>
     </div>
 </div>
