--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -1,7 +1,11 @@
 
-
+#page-toshow{
+  font-size: small;
+  width: 100%;
+  margin: 0px 220px 0px 0px;
+}
   @media only screen and (min-width: 1050px) {
-    
+
   .my-container{
     background-color: aliceblue;
   }
