--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -101,7 +101,7 @@
             id="generalClinicalBtn" (click)="displayReports('', true, Dept_Name, '', '','','','','','clinical')">
             <i class="material-icons">receipt_long</i>
           </button>
-          <button matTooltip="דווח ניהולי" id="generalClinicalBtn" mat-raised-button type="submit"
+          <button matTooltip="דווח ניהולי" id="generalClinicalBtn" *ngIf="ifAdmin == '1'" mat-raised-button type="submit"
             class="btn btn-primary btn-raised"
             (click)="displayReports('',true,Dept_Name,'','','','','','','administrative')">
             <i class="material-icons">assignment_ind</i>
@@ -257,24 +257,3 @@
   <br>
   <app-other-departments [deliveryRoomDialog]="deliveryRoomDialog" *ngIf="deliveryRoomDialog != undefined"></app-other-departments>
 </div>
-
-<ng-template #modalBug let-close="close">
-  <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal2()">
-      <span aria-hidden="true">&times;</span>
-  </button>
-  <h1 mat-dialog-title style="text-align: center;">דיווח תקלה</h1>
-  <hr>
-  <form mat-dialog-content dir="rtl" style="text-align: right;">
-      <mat-form-field class="example-full-width">
-          <mat-label>מספר טלפון לחזרה</mat-label>
-          <input matInput [(ngModel)]="phoneNumber" [ngModelOptions]="{standalone: true}" type="number" placeholder=".......05" required/>
-      </mat-form-field>
-      <mat-form-field class="example-full-width">
-          <mat-label>מהות התקלה</mat-label>
-          <textarea matInput rows="6" [(ngModel)]="reportSubject" [ngModelOptions]="{standalone: true}" cols="15" required></textarea>
-      </mat-form-field>
-  </form>
-  <div mat-dialog-actions>
-      <button mat-raised-button color="primary" (click)="submitBugReport()" mat-dialog-close>שליחה</button>
-  </div>
-</ng-template>
