--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -321,6 +321,9 @@
             <li class="nav-item" *ngIf="_EmSurgiries">
                 <a class="nav-link" routerLink="urgentsurgeries">ניתוחים דחופים</a>
             </li>
+            <li class="nav-item" *ngIf="_OrdersToAppointmentsComponent">
+                <a class="nav-link" routerLink="orderstoappointments"> בקשה לזימון תורים</a>
+            </li>
             <li class="nav-item" *ngIf="_OnlineAppointments">
                 <a class="nav-link" routerLink="onlineappointments">זימון תורים און-לין</a>
             </li>
