--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                 </mat-form-field>          
                 <mat-form-field class="full-width">
                   <input (keydown.enter)="login()" autocomplete="off" matInput placeholder="Password" [(ngModel)]="password" [type]="hide ? 'password' : 'text'" name="password" required>
-                  <mat-icon matSuffix class="my-icon" (mousedown)="hidePassword()" (mouseup)="hidePassword()">visibility</mat-icon>
+                  <mat-icon matSuffix class="my-icon" (mousedown)="hidePassword()" (touchstart)="hidePassword()" (touchend)="hidePassword()" (mouseup)="hidePassword()">visibility</mat-icon>
                 </mat-form-field>
           </div>
       </form>
