--- a/src/app/orders-to-appointments/orders-to-appointments.component.html
+++ b/src/app/orders-to-appointments/orders-to-appointments.component.html
@@ -458,6 +458,7 @@
                                 (focus)="OrderToDate.open()"
                                 [matDatepicker]="OrderToDate"
                                 formControlName="OrderToDate"
+                                (change)="changeReq($event)"
                             />
                             <mat-datepicker-toggle
                                 matSuffix
