--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.css
@@ -1,3 +1,17 @@
+#navigate-icon-before{
+  float: left;
+  margin-left: 100px;
+  background: cornflowerblue;
+  border-radius: 30%;
+  cursor: pointer;
+}
+#navigate-icon-next{
+  float: right;
+  margin-right: 100px;
+  background: cornflowerblue;
+  border-radius: 30%;
+  cursor: pointer;
+}
 
 @media only screen and (min-width: 1050px) {
 
