--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -1,9 +1,16 @@
 <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!progressBarNumbers"></mat-progress-bar>
-<button type="button" class="close" *ngIf="deliveryRoomDialog == undefined" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
+<button type="button" class="close" *ngIf="deliveryRoomDialog == undefined" matTooltip="סגירה" aria-label="Close"
+    (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 </button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><b style="margin-left: 120px;font-family: 'math';">לאחר לידה  </b> <span style="font-family: 'math';">{{myDate | date: "dd.MM.yyyy"}}</span></h4>
+    <h4><span class="material-icons" id="navigate-icon-next" (click)="getOtherDepartmentsDetails('next')" matTooltip="יום אחרי">
+        navigate_next
+    </span><b style="margin-left: 120px;font-family: 'math';">לאחר לידה </b> <span style="font-family: 'math';">{{newDate |
+            date: "dd.MM.yyyy"}}</span>
+            <span class="material-icons" id="navigate-icon-before" (click)="getOtherDepartmentsDetails('before')" matTooltip="יום לפני">
+                navigate_before
+            </span></h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="regular">
@@ -38,7 +45,8 @@
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay1"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay1;"></tr>
     </table>
-    <button mat-raised-button type="submit" class="btn btn-primary btn-raised mt-2" matTooltip="שמירה" (click)="getSubmitChanges('1')">
+    <button mat-raised-button type="submit" class="btn btn-primary btn-raised mt-2" matTooltip="שמירה"
+        (click)="getSubmitChanges('1')">
         <i class="material-icons">save</i>
     </button>
     <!-- <div class="row p-3">
@@ -74,7 +82,8 @@
                 </button></mat-list-item>
         </mat-list>
     </div> -->
-    <table dir="rtl" mat-table [dataSource]="dataSource3_2" class="mat-elevation-z8" id="patientsTable" style="width: 100%;">
+    <table dir="rtl" mat-table [dataSource]="dataSource3_2" class="mat-elevation-z8" id="patientsTable"
+        style="width: 100%;">
 
         <ng-container matColumnDef="casenumber">
             <th mat-header-cell *matHeaderCellDef> מס' מקרה (אמא) </th>
@@ -152,7 +161,8 @@
         </mat-form-field>
     </div>
 
-    <table dir="rtl" mat-table [dataSource]="dataSource4_2" class="mat-elevation-z8" id="patientsTable" style="width: 100%;">
+    <table dir="rtl" mat-table [dataSource]="dataSource4_2" class="mat-elevation-z8" id="patientsTable"
+        style="width: 100%;">
 
         <ng-container matColumnDef="patientid">
             <th mat-header-cell *matHeaderCellDef> תעודת זהות </th>
@@ -168,7 +178,7 @@
             <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
             <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
         </ng-container>
-        
+
         <ng-container matColumnDef="departname">
             <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
             <td mat-cell *matCellDef="let element"> {{element.DepartName}} </td>
@@ -213,14 +223,15 @@
 </form>
 
 <form class="form" *ngIf="ICU">
-    <h4 style="font-family: 'math';"><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4 style="font-family: 'math';"><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date:
+        "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource5" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="all">
             <th mat-header-cell *matHeaderCellDef> הכל </th>
             <td mat-cell *matCellDef="let element"><button type="button"
-                    (click)="getOtherDepartmentPatients('ALL','0',$event)" matTooltip="מטופלים במצטבר"
-                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
+                    (click)="getOtherDepartmentPatients('ALL','0',$event)" matTooltip="מטופלים במצטבר" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.ALL}}
                 </button>
                 <button type="button" style="background-color: aquamarine;font-family: 'math';"
@@ -242,8 +253,8 @@
                     {{element.HELEMNOW}}
                 </button></td>
         </ng-container>
-        
-        
+
+
         <ng-container matColumnDef="lyingdown">
             <th mat-header-cell *matHeaderCellDef> שוכבים </th>
             <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
@@ -272,7 +283,8 @@
             <th mat-header-cell *matHeaderCellDef> נשים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
-                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
+                    matTooltip="מטופלים במצטבר"
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.WOMEN}}
                 </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
@@ -284,7 +296,8 @@
             <th mat-header-cell *matHeaderCellDef> ילדים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';" matTooltip="מטופלים במצטבר">
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';"
+                    matTooltip="מטופלים במצטבר">
                     {{element.CHILDREN}}
                 </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
@@ -292,7 +305,7 @@
                     {{element.CHILDRENNOW}}
                 </button></td>
         </ng-container>
-        
+
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay3"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay3;"></tr>
@@ -301,15 +314,15 @@
     <hr>
     <h4 *ngIf="ICUDetails" style="font-family: 'math';">רשימת מטופלים<b>
         </b></h4>
-        <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!IcuPatientsBar"></mat-progress-bar>
+    <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!IcuPatientsBar"></mat-progress-bar>
     <div dir="rtl">
         <mat-form-field appearance="standard" *ngIf="ICUDetails">
             <mat-label>סינון</mat-label>
             <input matInput (keyup)="applyFilter3($event,'0')" placeholder="הקלד..." #input>
         </mat-form-field>
     </div>
-    <table dir="rtl" *ngIf="ICUDetails" mat-table [dataSource]="dataSource5_2" id="patientsTable" class="mat-elevation-z8"
-        style="width: 100%;">
+    <table dir="rtl" *ngIf="ICUDetails" mat-table [dataSource]="dataSource5_2" id="patientsTable"
+        class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="casenumber">
             <th mat-header-cell *matHeaderCellDef> מספר מקרה </th>
