--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -592,7 +592,7 @@
                     [width]="widthC"
                     [height]="heightC" -->
             <br /><br />
-            <div class="row rel">
+            <div class="row d-none rel">
                 <h6 class="col-12">
                     זמן
 ממוצע
@@ -630,7 +630,7 @@
                     זמן
 ממוצע
 למתן
-יעוץ כולל 30 דקות
+
                 </h6>
                 <div class="col-6">
                     <google-chart
@@ -659,7 +659,7 @@
                 
             </div><br /><br />
             
-            <div class="row rel">
+            <div class="row d-none rel">
                 <h6 class="col-12">
                     זמן
 ממוצע
@@ -693,7 +693,7 @@
                 
             </div>
             <br /><br />
-            <div class="row rel">
+            <div class="row d-none rel">
                 <h6 class="col-12">
                     זמן
 ממוצע
@@ -733,7 +733,7 @@
                     זמן
 ממוצע
 למתן
-יעוץ כולל 30 דקות
+
                 </h6>
                 <div class="col-6">
                     <google-chart
@@ -762,12 +762,12 @@
                 
             </div>
             <br /><br />
-            <div class="row rel">
+            <div class="row d-none rel">
                 <h6 class="col-12">
                     זמן
 ממוצע
 למתן
-יעוץ כולל 30 דקות
+
 (ללא פרא רפואי)
                 </h6>
                 <div class="col-6">
