--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -77,7 +77,7 @@
             <td mat-cell *matCellDef="let element"> {{element.DeathCount}} </td>
           </ng-container>
           <ng-container matColumnDef="kpc" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
-            <th mat-header-cell *matHeaderCellDef> CPE </th>
+            <th mat-header-cell *matHeaderCellDef> חיידק עמיד </th>
             <td mat-cell *matCellDef="let element"><span [ngStyle]="{'color':element.KpcCount != '0' ? 'red' : '' }">{{element.KpcCount}}</span></td>
           </ng-container>
           <ng-container matColumnDef="complex" *ngIf="Dept_Name != 'מיון יולדות (חדר לידה)'">
