--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -176,11 +176,14 @@
         </form>
 
         <!-- <div *ngIf="AdminNurse == '1'">
-
         </div> -->
-        <app-fill-report *ngFor="let item of ELEMENT_DATA" style="font-size: small;" [reportID]="item.reportID"
+        <app-fill-report *ngFor="let item of currentItemsToShow" style="font-size: small;" [reportID]="item.reportID"
             [userFullName]="item.userFullName" [ifGeneral]="ifGeneral"></app-fill-report>
-
+        <!-- <div class="card-footer pb-0 pt-3">
+                <jw-pagination [items]="items" (changePage)="onChangePage($event)"></jw-pagination>
+            </div> -->
+        <mat-paginator (page)="onPageChange($event)" [length]="ELEMENT_DATA.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]">
+        </mat-paginator>
     </div>
     <div class="container-fluid trans-80 mb-2">
         <div class="row search-cont">
