--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -182,7 +182,7 @@
         <!-- <div class="card-footer pb-0 pt-3">
                 <jw-pagination [items]="items" (changePage)="onChangePage($event)"></jw-pagination>
             </div> -->
-        <mat-paginator (page)="onPageChange($event)" [length]="ELEMENT_DATA.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 50]">
+        <mat-paginator (page)="onPageChange($event)" [length]="ELEMENT_DATA.length" [pageSize]="5" [pageSizeOptions]="[5, 10]">
         </mat-paginator>
     </div>
     <div class="container-fluid trans-80 mb-2">
